Remove integrated time
SignedEntryTimestamp becomes just SignedEntry.
